--- a/AirMall/Login/LoginViewController.xib
+++ b/AirMall/Login/LoginViewController.xib
@@ -333,6 +333,7 @@
                         </tableView>
                         <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zfs-fF-yM5">
                             <rect key="frame" x="0.0" y="225" width="355" height="2"/>
+                            <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="tintColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="355" id="8WV-9R-0X2"/>
